# edumenagemantsys

./: CMakeLists.txt  Makefile  README.md  a.out  backup_code.cpp  compile.sh  info.txt  main.cpp
Assignment/: Assignment_MVC.cpp  Assignment_MVC.h  Assignment_controler.cpp  Assignment_controler.h  Assignment_model.cpp  Assignment_model.h  Assignment_view.cpp  Assignment_view.h
database/: answer.txt  assignments.txt  course.txt  courses.txt  user.txt  user_course.txt  users.txt
database/ass/: 1.txt  11.txt  12.txt  13.txt  3.txt  6.txt  8.txt
database/assignments/: 13.txt  8.txt
database/courses/: 10.txt  15.txt  2.txt  7.txt  9.txt
database/users/: 1.txt  10.txt  2.txt  22.txt
database_class/: Database.cpp  Database.h
header_files/: ass.h  course.h  doctor.h  doctor_ass.h  doctor_course.h  helper_functions.h  main_header.h  student.h  student_ass.h  student_course.h  user.h
source_files/: ass.cpp  course.cpp  doctor.cpp  doctor_ass.cpp  doctor_course.cpp  helper_functions.cpp  student.cpp  student_ass.cpp  student_course.cpp  user.cpp
